@@ -1,0 +1,5 @@
+class RefreshLetsEncryptCertificateJob < ApplicationJob
+  def perform(app)
+    SshExecution.new(app.server).execute(command: "sudo dokku letsencrypt #{app.clean_name}")
+  end
+end
