@@ -1,0 +1,1 @@
+alert("LetsEncrypt certificate refresh initiated on server.")
