@@ -16,7 +16,11 @@
       </tbody>
     </table>
   </div>
-  <div data-role="form" class="column is-4">
-    <%= render "form" %>
+  <div class="column is-4">
+    <div class="data-role="form">
+      <%= render "form" %>
+    </div>
+
+    <%= render "letsencrypt" %>
   </div>
 </div>
