@@ -36,6 +36,7 @@ Rails.application.routes.draw do
     resources :apps, only: [:index, :new, :create, :destroy, :show] do
       scope module: :apps do
         resources :restarts, only: :create
+        resource :letsencrypt, controller: "lets_encrypt", except: :edit
       end
       resources :services, controller: "app_services", only: :index do
         post :create, on: :member
